--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "eslint-plugin-react": "^7.37.2",
     "eslint-plugin-react-hooks": "^5.1.0",
     "prettier": "^3.4.2",
-    "typescript": "^5.0.0"
+    "ts-node": "^10.9.1",
+    "typescript": "^5.7.2"
   }
 }
